# calendar_by_cpp_qt

calendar/: CMakeLists.txt  attendance.cpp  attendance.h  calendarutils.cpp  calendarutils.h  calendarwindow.cpp  calendarwindow.h  calendarwindow.ui  clienthandler.cpp  clienthandler.h  dbmanager.cpp  dbmanager.h  eventdialog.cpp  eventdialog.h  eventdialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  packetbuilder.h  packetparser.h  permission.cpp  permission.h  protocol.h  resources.qrc  server.cpp  server.h  signupwindow.cpp  signupwindow.h  signupwindow.ui  tcpclient.cpp  tcpclient.h  todo.cpp  todo.h  user.h
calendarClient/: CMakeLists.txt  CMakeLists.txt.user.230dda4(1).xml  CMakeLists.txt.user.230dda4.xml  CMakeLists.txt.user.350795b  CMakeLists.txt.user.350795b(1).xml  EventDto.h  addcalendardialog.cpp  addcalendardialog.h  addcalendardialog.ui  calendarinfo.h  calendarwidget.cpp  calendarwidget.h  calendarwidget.ui  eventdialog.cpp  eventdialog.h  eventdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  logo.cpp  logo.h  logo.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monthdelegate.cpp  monthdelegate.h  protocol.h  resources.qrc  signupdialog.cpp  signupdialog.h  signupdialog.ui  tcpclient.cpp  tcpclient.h
calendarServer/: CMakeLists.txt  CMakeLists.txt.user.230dda4(1).xml  CMakeLists.txt.user.230dda4.xml  CMakeLists.txt.user.350795b  CMakeLists.txt.user.350795b(1).xml  calendarutils.h  calendarwidget.cpp  calendarwidget.h  calendarwidget.ui  dbmanager.cpp  dbmanager.h  logo.cpp  logo.h  main.cpp  mainwindow.ui  server.cpp  server.h  signup.cpp  signup.h
